Fixed overflow error

--- a/style.sass
+++ b/style.sass
@@ -16,7 +16,7 @@
 body
   background: #FBF7FA
   font-family: "mytupi", sans-serif
-  // overflow: hidden
+  overflow: hidden
   
   main
     display: flex
@@ -224,10 +224,6 @@ body
 
       ul
         list-style: none
-        // position: absolute
-        // top: 50%
-        // left: 50%
-        // transform: translate(calc(-50% + 20px), -50%)
         height: max-content
         width: 100px
         margin-inline: auto
